# nrf52840-bacnet-field-node

./: .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: bacnet-object-map.md  ci-static-analysis-and-deploy.md  commissioning-guide.md  persistence-and-power.md  solid-and-patterns.md  validation-plan.md
docs/design/: README.md  implementation-roadmap.md  interface-control.md  requirements.md  runtime-design.md  system-design.md  validation-plan.md
docs/design/diagrams/: system-design.drawio
docs/diagrams/: README.md  commissioning-storage-flow.drawio  cpp-solid-patterns.drawio  field-node-system.drawio
examples/: commissioning-report.txt
include/field_node/: FieldNode.hpp
scripts/: run_static_analysis.sh
src/: FieldNode.cpp  main.c  main.cpp
tests/: FieldNodeTests.cpp  test_repo_smoke.py
tools/: generate_pages_site.py
